# newrelic-ios-agent

./: .gitattributes  .gitignore  .gitmodules  .xcodecoverageignore  CLAUDE.md  CONTRIBUTING.md  Gemfile  KSCRASH_FEASIBILITY_REPORT.md  NewRelicAgent.podspec  ORIGINAL_README.md  Package.swift  PrivacyInfo.xcprivacy  README-DSYM-UPLOAD-TOOLS.md  README.md  RUNNING_IOS_LAMBDA.txt  SWIFTUI_COMPATIBILITY.md  THIRD_PARTY_NOTICES.md  UIKIT_COMPATIBILITY.md  agent.modulemap  ios-agent-next.mdx  package-lock.json  package.json  project-brief.md  prompt.md  session-replay-performance-results.md
.claude-plugin/: marketplace.json  plugin.json
.github/: GITHUB_ACTIONS_README.md
Agent/: APrivateHeader.h
Agent.xcodeproj/: project.pbxproj
Agent.xcworkspace/: contents.xcworkspacedata
LambdaTest/: PR_INTEGRATION.md  SESSION_REPLAY_PERFORMANCE_TESTING.md  postResultsToPR.mjs  test-ios-main.js  test-ios.js  testPRPosting.mjs  uploadAppToLambdaTest.mjs  (+5 more)
libMobileAgent/: CMakeLists.txt  README.md  build.sh  createFatFramework.sh  createFatPlatform.sh  createFramework.sh  createThinArchive.sh  release_build.sh
libMobileAgent/LicenseData/: license_config.ini  license_ignore.txt  license_info.json  license_source_map.json
libMobileAgent/ext/JSON/: CMakeLists.txt  IJsonable.hpp  README.md  code_point_to_utf8.hh  json.hh  json.tab.cc  json.tab.hh  json.y  json_st.cc  json_st.hh  lex.yy.cc  test  test.cc  unescape.hh
libMobileAgent/ext/JSON/json.xcodeproj/: project.pbxproj
libMobileAgent/ext/JSON/json.xcodeproj/xcshareddata/xcschemes/: JSON.xcscheme
libMobileAgent/ext/gtest/: CmakeLists.txt
libMobileAgent/jetbrains/: codeStyling.xml
libMobileAgent/libMobileAgent.xcworkspace/: contents.xcworkspacedata
libMobileAgent/src/: CMakeLists.txt
libMobileAgent/src/Analytics/: CMakeLists.txt
libMobileAgent/src/Analytics/Analytics.xcodeproj/: project.pbxproj
libMobileAgent/src/Analytics/include/Analytics/: AnalyticsController.hpp  Attribute.hpp  AttributeBase.hpp  AttributeDeserializer.hpp  AttributeValidator.hpp  Constants.hpp  Deserializer.hpp  EventBufferConfig.hpp  EventDeserializer.hpp  EventManager.hpp  NetworkRequestData.hpp  NetworkResponseData.hpp  SessionAttributeManager.hpp
libMobileAgent/src/Analytics/include/Analytics/Events/: AnalyticEvent.hpp  BreadcrumbEvent.hpp  CustomEvent.hpp  CustomMobileEvent.hpp  InteractionAnalyticEvent.hpp  IntrinsicEvent.hpp  MobileEvent.hpp  NamedAnalyticEvent.hpp  NetworkErrorEvent.hpp  RequestEvent.hpp  SessionAnalyticEvent.hpp  UserActionEvent.hpp
libMobileAgent/src/Analytics/include/Analytics/Stores/: CacheBackedStore.hpp  FileBackedStore.hpp  PersistentStore.hpp
libMobileAgent/src/Analytics/src/: AnalyticsController.cxx  Attribute.cxx  AttributeBase.cxx  AttributeDeserializer.cxx  AttributeValidator.cxx  Constants.cxx  Deserializer.cxx  EventBufferConfig.cxx  EventDeserializer.cxx  EventManager.cxx  NetworkRequestData.cxx  NetworkResponseData.cxx  SessionAttributeManager.cxx
libMobileAgent/src/Analytics/src/Events/: AnalyticEvent.cxx  BreadcrumbEvent.cxx  CustomEvent.cxx  CustomMobileEvent.cxx  InteractionAnalyticEvent.cxx  IntrinsicEvent.cxx  MobileEvent.cxx  NamedAnalyticEvent.cxx  NetworkErrorEvent.cxx  RequestEvent.cxx  SessionAnalyticEvent.cxx  UserActionEvent.cxx
libMobileAgent/src/Connectivity/: CMakeLists.txt
libMobileAgent/src/Connectivity/Connectivity.xcodeproj/: project.pbxproj
libMobileAgent/src/Connectivity/include/Connectivity/: Facade.hpp  GuidGenerator.hpp  IFacade.hpp  IGuidGenerator.hpp  Payload.hpp  PayloadType.hpp
libMobileAgent/src/Connectivity/src/: Facade.cxx  GuidGenerator.cxx  Payload.cxx  PayloadType.cxx
libMobileAgent/src/Hex/: CMakeLists.txt
libMobileAgent/src/Hex/Hex.xcodeproj/: project.pbxproj
libMobileAgent/src/Hex/include/Hex/: HexAuditor.hpp  HexContext.hpp  HexController.hpp  HexPersistenceManager.hpp  HexPublisher.hpp  HexReportContext.hpp  HexStore.hpp  LibraryController.hpp
libMobileAgent/src/Hex/include/Hex/report/: AgentData.hpp  AppInfo.hpp  ApplicationLicense.hpp  HexReport.hpp
libMobileAgent/src/Hex/include/Hex/report/attributes/: Attributes.hpp  BooleanAttributes.hpp  DoubleAttributes.hpp  LongAttributes.hpp  StringAttributes.hpp
libMobileAgent/src/Hex/include/Hex/report/exception/: Frame.hpp  HandledException.hpp  Library.hpp  Thread.hpp
libMobileAgent/src/Hex/src/: HexAuditor.cxx  HexContext.cxx  HexController.cxx  HexPersistenceManager.cxx  HexPublisher.cxx  HexReportContext.cxx  HexStore.cxx  LibraryController.cxx
libMobileAgent/src/Hex/src/report/: AgentData.cxx  AppInfo.cxx  ApplicationLicense.cxx  HexReport.cxx
libMobileAgent/src/Hex/src/report/attributes/: BooleanAttributes.cxx  DoubleAttributes.cxx  LongAttributes.cxx  StringAttributes.cxx
libMobileAgent/src/Hex/src/report/exception/: Frame.cxx  HandledException.cxx  Library.cxx  Thread.cxx
libMobileAgent/src/Utilities/: CMakeLists.txt
libMobileAgent/src/Utilities/Utilities/Utilities.xcodeproj/: project.pbxproj
libMobileAgent/src/Utilities/include/Utilities/: Application.hpp  ApplicationContext.hpp  BaseValue.hpp  Boolean.hpp  LoggerBridge.hpp  Number.hpp  String.hpp  UUID.hpp  Util.hpp  Value.hpp  WorkQueue.hpp  libLogger.hpp
libMobileAgent/src/Utilities/src/: Application.cxx  ApplicationContext.cxx  BaseValue.cxx  Boolean.cxx  DefaultLogger.cxx  Number.cxx  String.cxx  UUID.cxx  Util.cxx  Value.cxx  WorkQueue.cxx  libLogger.cxx
libMobileAgent/test/: CMakeLists.txt
libMobileAgent/test/AnalyticsTest/: AnalyticController_test.cxx  AnalyticsEvent_test.cxx  Attribute_test.cxx  EventManager_test.cxx  FileBackedStore_test.cxx  PersistentStoreHelper.hpp  PersistentStore_test.cxx  SessionController_test.cxx
libMobileAgent/test/ConnectivityTest/: Facade_test.cxx
libMobileAgent/test/HexTests/: HexAudit_test.cxx  HexPersistenceManager_test.cxx  HexPublisher_test.cxx  HexReport_test.cxx  HexStore_test.cxx  LibraryController_test.cxx
libMobileAgent/test/UtilitiesTest/: Application_test.cxx  Boolean_test.cxx  Number_test.cxx  String_test.cxx  UUID_test.cxx  Util_test.cxx  WorkQueue_test.cxx
(+1435 files in other folders)
